[gd_scene load_steps=5 format=3 uid="uid://b2uifuo3ljxvk"]

[ext_resource type="PackedScene" uid="uid://dgutgy8a7yc44" path="res://animation.tscn" id="1_2kleb"]
[ext_resource type="Script" path="res://player.gd" id="1_6cpi3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2kgi1"]
size = Vector2(50, 211)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hdf4l"]
size = Vector2(50, 193)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_6cpi3")

[node name="Animation" parent="." instance=ExtResource("1_2kleb")]
scale = Vector2(0.22, 0.22)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_2kgi1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(252, -250)
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 20.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_right_margin = 0.1

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="DashArea" type="Area2D" parent="."]
position = Vector2(0, 74)

[node name="DashCollision" type="CollisionShape2D" parent="DashArea"]
position = Vector2(0, -81.5)
shape = SubResource("RectangleShape2D_hdf4l")

[connection signal="animate" from="." to="Animation" method="_on_player_animate"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
